discussion/kv_engine/184517/184517_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add support for retrieving per-thread cpu usage

Change-Id: I80ea3eda72e8a1cb81a0cf281cd248e0bcebe20c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-05 12:37:39.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-05 12:52:10.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22344/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10: error: "sigar.h" file not found [clang-diagnostic-error]
#include <sigar.h>
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22344/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
error: "sigar.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22344/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51675/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/protocol/mcbp/stats_context.cc(36): fatal error C1083: Cannot open include file: "sigar.h": No such file or directory ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51675/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43381/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43381/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12065/ : FAILURE

Compile error at [2023-01-05T12:44:59.037Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12065/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12152/ : FAILURE

Compile error at [2023-01-05T12:44:48.099Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12152/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24388/ : FAILURE

Compile error at [2023-01-05T12:42:26.107Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24388/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24811/ : FAILURE

Compile error at [2023-01-05T12:42:53.981Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24811/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25670/ : FAILURE

Compile error at [2023-01-05T12:41:22.761Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25670/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23915/ : FAILURE

Compile error at [2023-01-05T12:48:44.239Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23915/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32807/ : FAILURE

Compile error at [2023-01-05T12:44:33.491Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32807/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1107/ : FAILURE

Compile error at [2023-01-05T12:42:31.540Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1107/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21971/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
